force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Payment Transaction</description>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>