force-app/main/default/objects/Payment_Transaction__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <description>Collection Agency on Product at the time of Payment Transaction</description>
    <inlineHelpText>Collection Agency on Product at the time of Payment Transaction</inlineHelpText>
    <label>Collection Agency</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>