force-app/main/default/objects/Payment_Transaction__c/fields/Connect_Url__c.field-meta.xml
<CustomField>
    <fullName>Connect_Url__c</fullName>
    <description>Checkout form URL, generated by Zum Rails</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Checkout form URL, generated by Zum Rails</inlineHelpText>
    <label>Connect Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>