force-app/main/default/objects/Payment_Transaction__c/fields/CSV_Export_Completed__c.field-meta.xml
<CustomField>
    <fullName>CSV_Export_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CSV Export Completed</description>
    <inlineHelpText>CSV Export Completed</inlineHelpText>
    <label>CSV Export Completed</label>
    <type>Checkbox</type>
</CustomField>