force-app/main/default/objects/Payment_Transaction__c/fields/Current_Balance_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_on_Product__c</fullName>
    <description>Used for backend calculations only</description>
    <formula>Product__r.Current_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for backend calculations only</inlineHelpText>
    <label>Current Balance on Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>