force-app/main/default/objects/Payment_Transaction__c/fields/Customer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Address__c</fullName>
    <description>User Provided Email Address from related Customer Record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Provided Email Address from related Customer Record</inlineHelpText>
    <label>Customer Email Address</label>
    <type>Email</type>
</CustomField>