force-app/main/default/objects/Payment_Transaction__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <description>Used for backend only</description>
    <formula>Product__r.Customer__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for backend only</inlineHelpText>
    <label>Customer First Name</label>
    <type>Text</type>
</CustomField>