force-app/main/default/objects/Payment_Transaction__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Used for backend purpose only</description>
    <formula>Product__r.Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for backend purpose only</inlineHelpText>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>