force-app/main/default/objects/Payment_Transaction__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>End Date</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>