force-app/main/default/objects/Payment_Transaction__c/fields/End_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Format__c</fullName>
    <formula>DATEVALUE(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>