force-app/main/default/objects/Payment_Transaction__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error Message</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error Message</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>