force-app/main/default/objects/Payment_Transaction__c/fields/Grandparent_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Grandparent_Identifier__c</fullName>
    <description>Used for backend purpose only. Populate fund request id on recurring transaction child records.</description>
    <formula>Parent__r.Parent__r.Payment_Processor_Id__c</formula>
    <inlineHelpText>Used for backend purpose only. Populate fund request id on recurring transaction child records.</inlineHelpText>
    <label>Grandparent_Identifier</label>
    <type>Text</type>
</CustomField>