force-app/main/default/objects/Payment_Transaction__c/fields/Initial_Payment_Process_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Process_Initiated_By__c</fullName>
    <description>The field is created for reporting purpose to populate Request Fund Initiated by from parent transaction</description>
    <formula>IF( OR(Parent__r.RecordType.DeveloperName = &apos;Request_Funds_One_Time&apos;, Parent__r.RecordType.DeveloperName = &apos;Request_Funds_Recurring&apos;) , TEXT(Parent__r.Payment_Initiated_By__c),  TEXT(Parent__r.Parent__r.Payment_Initiated_By__c) )</formula>
    <inlineHelpText>The field is created for reporting purpose to populate Request Fund Initiated by from parent transaction</inlineHelpText>
    <label>Initial Payment Process Initiated By</label>
    <type>Text</type>
</CustomField>