force-app/main/default/objects/Payment_Transaction__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <description>Next Payment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Next Payment Date</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>