force-app/main/default/objects/Payment_Transaction__c/fields/Next_Payment_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date_Text__c</fullName>
    <formula>Text(DAY( Next_Payment_Date__c)) &amp; &quot; &quot; &amp; Text(MONTH(Next_Payment_Date__c ))  &amp; &quot; &quot;&amp; Text(YEAR(Next_Payment_Date__c ))</formula>
    <label>Next Payment Date</label>
    <type>Text</type>
</CustomField>