force-app/main/default/objects/Payment_Transaction__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Payment Transaction</description>
    <inlineHelpText>Parent Payment Transaction</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>