force-app/main/default/objects/Payment_Transaction__c/fields/Parent_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Parent_Identifier__c</fullName>
    <description>Used for backend purpose only</description>
    <formula>Parent__r.Payment_Processor_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for backend purpose only</inlineHelpText>
    <label>Parent_Identifier</label>
    <type>Text</type>
</CustomField>