force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Completion_Date__c</fullName>
    <description>Payment Completion Date for one time payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Completion Date</inlineHelpText>
    <label>Payment Completion Date</label>
    <type>DateTime</type>
</CustomField>