force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Initiated_By__c</fullName>
    <description>Payment Process Initiated By</description>
    <inlineHelpText>Payment Process Initiated By</inlineHelpText>
    <label>Payment Process Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal User</fullName>
            </value>
            <value>
                <fullName>End Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>