force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Processor_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor_Id__c</fullName>
    <description>Payment Processor Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Payment Processor Id</inlineHelpText>
    <label>Payment Processor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>