force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Processor_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor_Request__c</fullName>
    <description>Stores payment processor request for Payment Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores payment processor request for Payment Transaction</inlineHelpText>
    <label>Payment Processor Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>