force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Processor_Webhook_Response__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor_Webhook_Response__c</fullName>
    <description>Stores payment processor webhook response</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores payment processor webhook response</inlineHelpText>
    <label>Payment Processor Webhook Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>