force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Payment Type</description>
    <inlineHelpText>Payment Type</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment in Full</fullName>
            </value>
            <value>
                <fullName>One-Time Payment</fullName>
            </value>
            <value>
                <fullName>Recurring Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>