force-app/main/default/objects/Payment_Transaction__c/fields/Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_ID__c</fullName>
    <description>Portal ID (record identifier in  Portal)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Portal ID</inlineHelpText>
    <label>Portal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>