force-app/main/default/objects/Payment_Transaction__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <description>Used for backend purpose only</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for backend purpose only</inlineHelpText>
    <label>Product_Identifier</label>
    <type>Text</type>
</CustomField>