force-app/main/default/objects/Payment_Transaction__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record_Type_Name</label>
    <type>Text</type>
</CustomField>