force-app/main/default/objects/Payment_Transaction__c/fields/Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Type__c</fullName>
    <description>Recurrence Type</description>
    <inlineHelpText>Recurrence Type</inlineHelpText>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>