force-app/main/default/objects/Payment_Transaction__c/fields/Site_ConnectURL__c.field-meta.xml
<CustomField>
    <fullName>Site_ConnectURL__c</fullName>
    <description>Site ConnectURL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Site ConnectURL</inlineHelpText>
    <label>Site ConnectURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>