force-app/main/default/objects/Payment_Transaction__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>Status Change Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status Change Date</inlineHelpText>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>