force-app/main/default/objects/Payment_Transaction__c/recordTypes/One_time_Payment.recordType-meta.xml
<RecordType>
    <fullName>One_time_Payment</fullName>
    <active>true</active>
    <description>One time Payment</description>
    <label>One time Payment</label>
</RecordType>