force-app/main/default/objects/Payment_Transaction__c/recordTypes/Recurring_Payment_Child.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Payment_Child</fullName>
    <active>true</active>
    <description>Recurring Payment Child</description>
    <label>Recurring Payment Child</label>
</RecordType>