force-app/main/default/objects/Payment_Transaction__c/recordTypes/Recurring_Payment_Master.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Payment_Master</fullName>
    <active>true</active>
    <description>Recurring Payment Master</description>
    <label>Recurring Payment Master</label>
</RecordType>