force-app/main/default/objects/Payment_Transaction__c/recordTypes/Request_Funds_One_Time.recordType-meta.xml
<RecordType>
    <fullName>Request_Funds_One_Time</fullName>
    <active>true</active>
    <description>Request Funds On Time</description>
    <label>Request Funds One Time</label>
</RecordType>