force-app/main/default/objects/Payment_Transaction__c/recordTypes/Request_Funds_Recurring.recordType-meta.xml
<RecordType>
    <fullName>Request_Funds_Recurring</fullName>
    <active>true</active>
    <description>Request Funds Recurring</description>
    <label>Request Funds Recurring</label>
</RecordType>