force-app/main/default/objects/Payment_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Amount__c</columns>
    <columns>Product__c</columns>
    <columns>Payment_Completion_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Payment_Processor_Id__c</columns>
    <columns>Parent_Identifier__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>