force-app/main/default/objects/Payment_Transaction__c/listViews/All_Recurrent_Child_Payment_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Recurrent_Child_Payment_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Product__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Completion_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CSV_Export_Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment_Transaction__c.Recurring_Payment_Child</value>
    </filters>
    <label>All Recurrent Child Payment Transactions</label>
    <language>en_US</language>
    <sharedTo>
        <group>Customer_Portal_Group</group>
    </sharedTo>
</ListView>