force-app/main/default/objects/Payment_Transaction__c/listViews/All_Request_Funds_Recurring.listView-meta.xml
<ListView>
    <fullName>All_Request_Funds_Recurring</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Recurrence_Type__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Initiated_By__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Processor_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment_Transaction__c.Request_Funds_Recurring</value>
    </filters>
    <label>All Request Funds - Recurring</label>
    <language>en_US</language>
    <sharedTo>
        <group>Customer_Portal_Group</group>
    </sharedTo>
</ListView>