force-app/main/default/objects/Payment_Transaction__c/listViews/All_Transactions_Export_Completed.listView-meta.xml
<ListView>
    <fullName>All_Transactions_Export_Completed</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CSV_Export_Completed__c</columns>
    <columns>Parent__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSV_Export_Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment_Transaction__c.One_time_Payment,Payment_Transaction__c.Recurring_Payment_Child</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Transactions - Export Completed</label>
    <language>en_US</language>
</ListView>